# Todo-App

./: .env.example  .gitignore  AUTO_UPDATER_SETUP.md  HOMEBREW_SUBMISSION.md  README.md  SECURITY.md  package-lock.json  package.json  todo-app.rb.template  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: generate-updater-json.mjs
.github/workflows/: dependency-scanning.yml  publish.yml  security-checks.yml
.husky/: pre-commit  pre-push
docs/: DEEP_LINK_TESTING.md  PENETRATION_TESTING.md  RLS_TESTING.md  SECURITY_CHECKLIST.md  SECURITY_TESTING.md  SESSION_TESTING.md
docs/test-results/: README.md
docs/test-results/deep-link-testing/: 2025-01-13-deep-link-test.md  TEMPLATE.md
docs/test-results/penetration-testing/: 2025-01-13-penetration-test.md  TEMPLATE.md
scripts/: audit-deps.cjs  check-audit-thresholds.cjs  check-build.js  validate-env.js
src/: App.tsx  index.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  default.md
src-tauri/src/: main.rs
src/components/: Auth.css  Auth.tsx  ErrorBoundary.tsx  LoadingScreen.css  LoadingScreen.tsx  Preferences.css  Preferences.tsx  UpdateManager.css  UpdateManager.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useUpdater.ts
src/lib/: logger.ts  security.ts  supabase.ts  updater.ts
supabase/: README.md
supabase/migrations/: 20250101000001_initial_schema.sql  20250101000002_enable_rls.sql  20250101000003_rpc_functions.sql  20250101000004_drop_unique_constraint.sql  20250101000005_enforce_not_null_preferences.sql
(+4 files in other folders)
