[package]
name = "todo-app"
version = "1.0.9"
description = "A minimalist todo app with local storage"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.9.2", default-features = false, features = ["macos-private-api", "wry"] }
tauri-plugin-fs = "2.4.0"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-deep-link = "2.4.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.0"
window-vibrancy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
